--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!doctype html>
 <html>
     <head>
-        <title>Production Flow Visualization</title>
+        <title>Production Flow</title>
         <style type="text/css">
             html, body {
                 font: 16pt arial;
