Updated changes moved to master

--- a/neo4jcreater.html
+++ b/neo4jcreater.html
@@ -47,7 +47,7 @@
               </select>
               <div class="help-block with-errors"></div>
             </div>
-            </div><!-- close row-->
+            </div> -->
             
             <div class="row">
             <div class="form-group col-md-12">
