Styling the neo4j viewer

--- a/neo4jcreater.html
+++ b/neo4jcreater.html
@@ -1,5 +1,10 @@
 
 <link rel="stylesheet" type="text/css" href="style.css">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+
 <script src="node_modules/neovis.js/dist/neovis.js"></script>
 <script type="module" src="index.js"></script>
 <section class="footer-form padding-top-xl padding-bottom-xl" aria-label="Contact Form">
@@ -8,7 +13,7 @@
       <div class="row">
         <div class="col-xs-12 section5 text-center">
           <h2 class="h1 font-w400">Neo4j Web Interface</h2>
-          <p class="margin-top-m margin-bottom-m">Create graph nodes with the help of this interface programatically, without using the neo4j browser!</p>
+          <p class="margin-top-m margin-bottom-m">Create graph nodes with the help of this interface programatically, without using the neo4j browser by Hari Santhosh!</p>
         </div>
       </div>          
       <div class="row">
@@ -50,23 +55,6 @@
             </div> -->
             
             <div class="row">
-            <div class="form-group col-md-12">
-              <div class="text-center">
-              <label>Create a realationship now ?</label>
-              <div class="radio">
-                <label>
-                <input type="radio" name="digital_brochure" value="yes" required>
-                Yes!
-                </label>
-              </div>
-              <div class="radio">
-                <label>
-                <input type="radio" name="digital_brochure" value="no" required>
-                No thanks.
-                </label>
-              </div>
-              </div>
-            </div>
             </div><!-- close row-->
             <div class="form-group text-center">
             <input class="submit center-block btn btn-primary" value="Submit" type="submit">
@@ -75,7 +63,7 @@
 
         </div>
       </div>
-    </div>
-	<div id="viz"></div>
+      <div id="viz"></div>
+    </div>	
   </div>
 </section>
