--- a/neo4jcreater.html
+++ b/neo4jcreater.html
@@ -1,9 +1,14 @@
-
 <link rel="stylesheet" type="text/css" href="style.css">
-<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
+  integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
-<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
-<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
+<!-- <script src="https://unpkg.com/mqtt@3.0.0/dist/mqtt.min.js"></script> -->
+<!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/paho-mqtt/1.0.1/mqttws31.min.js"></script> -->
+<script src="https://cdn.jsdelivr.net/npm/socket.io-client@2/dist/socket.io.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
+  integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
+  integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
 <script src="node_modules/neovis.js/dist/neovis.js"></script>
 <script type="module" src="index.js"></script>
@@ -13,38 +18,44 @@
       <div class="row">
         <div class="col-xs-12 section5 text-center">
           <h2 class="h1 font-w400">Neo4j Web Interface</h2>
-          <p class="margin-top-m margin-bottom-m">Create graph nodes with the help of this interface programatically, without using the neo4j browser by Hari Santhosh!</p>
+          <p class="margin-top-m margin-bottom-m">Create graph nodes with the help of this interface programatically,
+            without using the neo4j browser by Hari Santhosh!</p>
         </div>
-      </div>          
+      </div>
       <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-		
+
           <form name="neo4jForm" method="" role="form" data-toggle="validator" novalidate="true" id="neo4j_form">
-          <div class="form schedule-assessment">
-            <div class="row margin-top-l">
-            <div class="form-group col-md-6">
-              <label for="cypher_query" class="sr-only">Enter Cypher Query: </label>
-              <input name="cypher_query" id="cypher_query" placeholder="Enter Cypher Query" type="text" value="" required="required" data-error="Please enter your full name.">
-              <div class="help-block with-errors"></div>
-            </div><!-- close col-->  
-            <!-- <div class="form-group col-md-6">
+            <div class="form schedule-assessment">
+              <div class="row margin-top-l">
+                <div class="form-group col-md-6">
+                  <label for="cypher_query" class="sr-only">Enter Cypher Query: </label>
+                  <input name="cypher_query" id="cypher_query" placeholder="Enter Cypher Query" type="text" value=""
+                    required="required" data-error="Please enter your full name.">
+                  <div class="help-block with-errors"></div>
+                </div><!-- close col-->
+                <!-- <div class="form-group col-md-6">
               <label for="property" class="sr-only">Property: </label>
               <input name="property" id="property" placeholder="Unique Id" type="text" value="" required="required" data-error="Please enter your phone number">
               <div class="help-block with-errors"></div>
             </div>
             <!-- close col-->
-            </div><!-- close row-->
-            
-            <div class="row">
-            </div><!-- close row-->
-            <div class="form-group text-center">
-            <input class="submit center-block btn btn-primary" value="Submit" type="submit">
+              </div><!-- close row-->
+
+              <div class="row">
+              </div><!-- close row-->
+              <div class="form-group text-center">
+                <input class="submit center-block btn btn-primary" value="Submit" type="submit">
+              </div>
             </div>
-          </div>
 
         </div>
       </div>
+      <br />
+      <input id="startSim" class="submit center-block btn btn-secondary" value="Start Simulation" type="button">
+      <input id="stopSim" class="submit center-block btn btn-secondary" value="Stop Simulation" type="button">
+      <br />
       <div id="viz"></div>
-    </div>	
+    </div>
   </div>
 </section>
