--- a/neo4jcreater.html
+++ b/neo4jcreater.html
@@ -56,6 +56,7 @@
       <input id="stopSim" class="submit center-block btn btn-secondary" value="Stop Simulation" type="button">
       <br />
       <div id="viz"></div>
+      <div id="myLogFile"></div>      
     </div>
   </div>
 </section>
