Filter and render custom graphs without constructing cypher query

--- a/neo4jcreater.html
+++ b/neo4jcreater.html
@@ -51,7 +51,9 @@
 
         </div>
       </div>
+      <input name="labelnameg" id="labelnameg" placeholder="Enter Label Name" type="text" value="" data-error="Please enter label name of the neo4j graph node">
       <br />
+      <input id="searchNode" class="submit center-block btn btn-primary" value="Search Neo4j" type="button">
       <input id="startSim" class="submit center-block btn btn-secondary" value="Start Simulation" type="button">
       <input id="stopSim" class="submit center-block btn btn-secondary" value="Stop Simulation" type="button">
       <br />
